--- a/V2RayX/Base.lproj/MainMenu.xib
+++ b/V2RayX/Base.lproj/MainMenu.xib
@@ -1,8 +1,8 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11201" systemVersion="16A323" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="11762" systemVersion="15G1212" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11201"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="11762"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -673,6 +673,7 @@
                     </menu>
                 </menuItem>
             </items>
+            <point key="canvasLocation" x="118" y="-2"/>
         </menu>
         <menu id="yZm-2L-r3v">
             <items>
@@ -728,6 +729,13 @@
                         <action selector="showHelp:" target="Voe-Tx-rLC" id="S0S-9o-8U5"/>
                     </connections>
                 </menuItem>
+                <menuItem title="About" id="esg-xy-8ve">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="orderFrontStandardAboutPanel:" target="-1" id="5zv-YX-e5a"/>
+                    </connections>
+                </menuItem>
+                <menuItem isSeparatorItem="YES" id="Dsn-rn-Ieo"/>
                 <menuItem title="Quit" id="8f2-cF-RxH">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
@@ -735,7 +743,7 @@
                     </connections>
                 </menuItem>
             </items>
-            <point key="canvasLocation" x="232.5" y="253.5"/>
+            <point key="canvasLocation" x="76" y="221"/>
         </menu>
         <menu title="ServerList" id="pPD-dn-4h0">
             <point key="canvasLocation" x="445" y="279.5"/>
